# mazer-runner

./: .gitignore  CMakeLists.txt
include/: Camera.h  Floor.h  HUD.h  Item.h  ItemBox.h  MazeGenerator.h  Objects.h  TextureLoader.h  Wall.h  Window.h
include/glad/: glad.h
src/: Camera.cpp  Floor.cpp  HUD.cpp  ItemBox.cpp  MazeGenerator.cpp  Objects.cpp  SoundManager,coo  TextureLoader.cpp  Wall.cpp  Window.cpp  main.cpp
